Modificacion del header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,10 @@
             <ul>
                 <li>
                     <img src="logo.png" alt="Logo de Pepsi">
-                    <a href="#">¿Quienes somos?</a>
+                    <a href="#">Inicio</a>
                     <a href="#">Contacto</a>
                     <a href="#">Ayuda</a>
+                    <a href="index.html">Entrevista</a>
                 </li>
             </ul>
         </header>
