--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <header>
             <ul>
                 <li>
-                    <img src="logo.png" alt="Logo de Pepsi">
-                    <a href="#">Inicio</a>
+                    <a href="#"><img src="logo.png" alt="Logo de Pepsi"></a>
                     <a href="#">Contacto</a>
                     <a href="#">Ayuda</a>
                     <a href="index.html">Entrevista</a>
