Boton de Enviar

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                 <h4>Contanos sobre vos:</h4>
                 <textarea name="textarea" id=""></textarea>
             </div>
+
+            <input type="button" value="Enviar">
     </main>
     <script src="script.js"></script>
 </body>
