--- a/index.html
+++ b/index.html
@@ -10,59 +10,60 @@
     <main>
         <header>
             <ul>
-                <li>
-                    <a href="#"><img src="logo.png" alt="Logo de Pepsi"></a>
+                <li class="Enlaces">
                     <a href="#">Contacto</a>
                     <a href="#">Ayuda</a>
                     <a href="index.html">Entrevista</a>
                 </li>
+                <li class="Enlace__logo">
+                    <a href="#"><img src="logo.png" alt="Logo de Pepsi"></a>
+                </li>
             </ul>
         </header>
-        <h1>Entrevista de trabajo</h1>
-        <h2>Saque acá su turno</h2>
+        
         <form action=""></form>
-            <div>
-                <label for="input">Nombre: </label>
-                <input type="text">
-            </div>
+        <div class="form__div">
+            <h1>Entrevista de trabajo</h1>
+            <h2>Saque su turno</h2>
+        
+                <div class="form__div__div">
+                    <label for="input">Nombre: </label>
+                    <input type="text" placeholder="xxxxx">
+                     <label for="input">Apellido: </label>
+                    <input type="text" placeholder="xxxxx">
+                </div>
 
-            <div>
-                <label for="input">Apellido: </label>
-                <input type="text">
-            </div>
+                <div class="form__div__div">
+                    <label for="input">Email: </label>
+                    <input type="text" placeholder="@gmail">
+                    <label for="input">Numero: </label>
+                    <input type="number" placeholder="10 caracteres">
+                </div>
 
-            <div>
-                <label for="input">DNI: </label>
-                <input type="number">
-            </div>
+                <div class="form__dni">
+                    <label for="input">DNI: </label>
+                    <input type="number" placeholder="8 caracteres">
+                </div>
 
-            <div>
-                <label for="input">Numero: </label>
-                <input type="number">
-            </div>
+                <div>
+                    <label for="sedes">Elegi la sede: </label>
+                    <select name="Sedes" id="algo">
+                        <option value="torcuato">Ayacucho 533-Don torcuato</option>
+                        <option value="san-fernando">Tuyuti 1026 -San fernando</option>
+                        <option value="garin">Matheu 784-Garin</option>
+                        <option value="benavidez">Milberg 666-Benavidez</option>
+                    </select>
+                </div>
 
-            <div>
-                <label for="input">Email: </label>
-                <input type="text">
-            </div>
+                <div>
+                    <h4>Contanos sobre vos:</h4>
+                    <textarea name="textarea" id=""></textarea>
+                </div>
 
-            <div>
-                <label for="sedes">Elegi la sede: </label>
-                <select name="Sedes" id="algo">
-                    <option value="torcuato">Ayacucho 533-Don torcuato</option>
-                    <option value="san-fernando">Tuyuti 1026 -San fernando</option>
-                    <option value="garin">Matheu 784-Garin</option>
-                    <option value="benavidez">Milberg 666-Benavidez</option>
-                </select>
+                <input type="button" value="Enviar">
             </div>
-
-            <div>
-                <h4>Contanos sobre vos:</h4>
-                <textarea name="textarea" id=""></textarea>
-            </div>
-
-            <input type="button" value="Enviar">
     </main>
     <script src="script.js"></script>
 </body>
+<footer>copyright©M/s Pepsi pasantia. All rights reserved</footer>
 </html>
