--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <ul>
                 <li class="Enlaces">
-                    <a href="#">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                     <a href="#">Ayuda</a>
                     <a href="index.html">Entrevista</a>
                 </li>
@@ -29,7 +29,7 @@
                 <div class="form__div__div">
                     <label for="input">Nombre: </label>
                     <input type="text" placeholder="xxxxx">
-                     <label for="input">Apellido: </label>
+                    <label for="input">Apellido: </label>
                     <input type="text" placeholder="xxxxx">
                 </div>
 
