--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li class="Enlaces">
                     <a href="#">Contacto</a>
-                    <a href="#">Ayuda</a>
+                    <a href="pepsi.html">Productos</a>
                     <a href="index.html">Entrevista</a>
                 </li>
                 <li class="Enlace__logo">
