--- a/pepsi.html
+++ b/pepsi.html
@@ -20,18 +20,42 @@
                 </li>
             </ul>
         </header>
-        <div class="info_nutri">
+        <div class="hoja">
             <div class="info_nutri">
                 <h1>PEPSI</h1>
-            </div>
-                <div class="info_nutri">
-                    <h2>Informacion Nutricional</h2>
-            </div>
-                <p>Tamaño de la porción:12fl oz
-            Porciones por envase: 1</p>
+                <hr class="linea">
+                <h2>Informacion Nutricional</h2>
+                <hr class="linea">
+                <p>Tamaño de la porción:12fl oz Porciones por envase: 1</p>
+                <p>Cantidad por porción
+                <hr>
+               <div><p class="derecha">% Valor diario</p></div> 
+                Calorías: 150
+                <br>
+                <div class="kiko">
+                    <p>Grasa total: 0 g</p>
+                    <p>0 %</p>
+                </div>
+                <div class="kiko">
+                <p>Sodio: 30 mg</p> 
+                <p>1 %</p>   
+                </div>
+                
+                Carbohidratos totales 41 g
+                14 %
+                Azúcares 41g
+                Proteína 0g</p>
             </div>
         </div>
-        <img src="pepsi-pdp.jpeg" alt="Pepsi" class="pepsi-logoS">
+        <div class="imagen">
+           <div>
+            <img src="pepsi-pdp.jpeg" alt="Pepsi" class="pepsi-logoS">
+           </div> 
+        </div>
+        
     </main>
+
+<script>
+</script>
 </body>
 </html>
