--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
             <ul class="header">
                 <li class="Enlaces">
                     <a href="contacto.html">Contacto</a>
-                    <a href="#">Ayuda</a>
+                    <a href="pepsi.html">Productos</a>
                     <a href="index.html">Entrevista</a>
                 </li>
                 <li class="Enlace__logo">
