--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li class="Enlaces">
                     <a href="contacto.html">Contacto</a>
-                    <a href="#">Ayuda</a>
+                    <a href="pepsi.html">Productos</a>
                     <a href="entrevista.html">Entrevista</a>
                 </li>
                 <li class="Enlace__logo">
