--- a/pepsi.html
+++ b/pepsi.html
@@ -11,7 +11,7 @@
         <header>
             <ul>
                 <li class="Enlaces">
-                    <a href="#">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                     <a href="pepsi.html">Productos</a>
                     <a href="index.html">Entrevista</a>
                 </li>
@@ -20,6 +20,7 @@
                 </li>
             </ul>
         </header>
+        <div class="contenedor">
         <div class="hoja">
             <div class="info_nutri">
                 <h1>PEPSI</h1>
@@ -30,8 +31,9 @@
                 <p>Cantidad por porción
                 <hr>
                <div><p class="derecha">% Valor diario</p></div> 
-                Calorías: 150
-                <br>
+                <div>
+                    <p>Calorías: 150</p>
+                </div>
                 <div class="kiko">
                     <p>Grasa total: 0 g</p>
                     <p>0 %</p>
@@ -40,19 +42,17 @@
                 <p>Sodio: 30 mg</p> 
                 <p>1 %</p>   
                 </div>
-                
-                Carbohidratos totales 41 g
-                14 %
-                Azúcares 41g
-                Proteína 0g</p>
-            </div>
+                <div class="kiko">
+                 <p>Carbohidratos totales: 41g</p>   
+                 <p>14 %</p>  
+                </div>
+                <p>Azúcares: 41g</p>    
+                </div>
+                 <div>
+                <p>Proteína: 0g</p> 
+                </div>
         </div>
-        <div class="imagen">
-           <div>
-            <img src="pepsi-pdp.jpeg" alt="Pepsi" class="pepsi-logoS">
-           </div> 
         </div>
-        
     </main>
 
 <script>
