--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -12,6 +11,7 @@
         <header>
             <ul>
                 <li class="Enlaces">
+                    <a href="index.html">Inicio</a>
                     <a href="contacto.html">Contacto</a>
                     <a href="#">Ayuda</a>
                     <a href="entrevista.html">Entrevista</a>
@@ -22,12 +22,16 @@
             </ul>
         </header>
 
-        <div class="grid__index">
-            <div class="grid__main__title">Title</div>
-            <div class="grid__main__description">Description</div>
-            <div class="grid__main__imagen">Image</div>
+        <div class="container">
+            <div class="title">
+                <h1>Bienvenido</h1>
+                <h2>Empecemos</h2>
+                <p>Desliza para informacion</p>
+            </div>
+            <div class="container__img"><img src="https://www.pepsi.com/assets/images/cans/can-2.webp" alt="logo de pepsi"></div>
+            <div class="content"></div>
+            <footer>asdkj</footer>
         </div>
-        
     </main>
     <script src="script.js"></script>
 </body>
