--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylecontact.css">
 </head>
 <body>
@@ -12,12 +11,13 @@
         <header>
             <ul class="header">
                 <li class="Enlaces">
+                    <a href="index.html">Inicio</a>
                     <a href="contacto.html">Contacto</a>
                     <a href="#">Ayuda</a>
-                    <a href="index.html">Entrevista</a>
+                    <a href="entrevista.html">Entrevista</a>
                 </li>
                 <li class="Enlace__logo">
-                    <a href="#"><img src="logo.png" alt="Logo de Pepsi"></a>
+                    <a href="index.html"><img src="logo.png" alt="Logo de Pepsi"></a>
                 </li>
             </ul>
         </header>
