--- a/index.html
+++ b/index.html
@@ -26,11 +26,46 @@
             <div class="title">
                 <h1>Bienvenido</h1>
                 <h2>Empecemos</h2>
-                <p>Desliza para informacion</p>
+                <li>
+                    <a href="http://">Desliza para informacion<br>
+                                                ▼</a>
+                </li>
             </div>
             <div class="container__img"><img src="https://www.pepsi.com/assets/images/cans/can-2.webp" alt="logo de pepsi"></div>
-            <div class="content"></div>
-            <footer>asdkj</footer>
+            
+        </div>
+        
+        <div class="content">
+
+            <div class="content_main">
+                <div class="column">
+                    <a href="#"><img src="https://www.pepsi.com/s3fs-public/2025-05/3303620_Pepsicom_2025_Work_May_Drop_TShirt_R1_Product%20Tile%20666%20x%20666.png" alt="img de merchandise"></a>
+                </div>
+
+                <div class="column">
+                    <a href="#"><img src="https://www.pepsi.com/s3fs-public/2025-05/3303620_Pepsicom_2025_Work_May_Drop_FlyingDisc_R1_Product%20Tile%20666%20x%20666.png" alt="img de merchandise"></a>
+                </div>
+
+                <div class="column">
+                    <a href="http://"><img src="https://www.pepsi.com/s3fs-public/2025-05/3303620_Pepsicom_2025_Work_May_Drop_Cooler_R1_Product%20Tile%20666%20x%20666.png" alt="img de merchandise"></a>
+                </div>
+
+            </div>
+
+            <div class="content_title">
+                <img src="pepsi-revamp.png" alt="Pepsi revamp img">
+                <h1>¡Participa ahora para tener la oportunidad de ganar una colección
+                    de productos retro de edición limitada!</h1>
+                <li class="content_title_btn">
+                    <a href="http://">SIGN IN TO ENTER</a>
+                </li>
+                <li class="content_title_rule">
+                    <a href="https://www.pepsi.com/official-rules">U.S. res, 18+ (19+ in AL/NE). Ends 6/10/25.
+                         Limit one entry per person/email address per day. Subject to Official Rules.
+                         *Actual prize may vary from what’s shown.</a>
+                </li>
+            </div>     
+
         </div>
     </main>
     <script src="script.js"></script>
