--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 <body>
     <main>
         <header>
-            <ul>
-                <li class="Enlaces">
-                    <a href="index.html">Inicio</a>
-                    <a href="contacto.html">Contacto</a>
-                    <a href="pepsi.html">Productos</a>
-                    <a href="entrevista.html">Entrevista</a>
+            <li class="Enlace__logo">
+                        <a href="index.html"><img src="logo.png" alt="Logo de Pepsi"></a>
                 </li>
-                <li class="Enlace__logo">
-                    <a href="index.html"><img src="logo.png" alt="Logo de Pepsi"></a>
-                </li>
-            </ul>
+            <button class="menu-btn">...</button>
+            <nav>
+                <ul class="menu-items">
+                        <li class="items_inicio"><a href="index.html">Inicio</a></li>
+                        <li class="items_contacto"><a href="contacto.html">Contacto</a></li>
+                        <li class="items_productos"><a href="pepsi.html">Productos</a></li>
+                        <li class="items-pruductos"><a href="entrevista.html">Entrevista</a></li>
+                </ul>
+            </nav>
         </header>
 
         <div class="container">
@@ -68,7 +69,7 @@
 
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 <footer>copyright©M/s Pepsi pasantia. All rights reserved</footer>
 </html>
