--- a/html-productos/pepsi-diet.html
+++ b/html-productos/pepsi-diet.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="css/pepsi-diet.css">
+    <link rel="stylesheet" href="pepsi-diet.css">
 </head>
 <body>
     <main>
         <header>
             <ul>
                 <li class="Enlaces">
-                    <a href="htmls\contacto.html">Contacto</a>
-                    <a href="htmls\pepsi.html">Productos</a>
-                    <a href="htmls\index.html">Entrevista</a>
+                    <a href="contacto.html">Contacto</a>
+                    <a href="pepsi.html">Productos</a>
+                    <a href="index.html">Entrevista</a>
                 </li>
                 <li class="Enlace__logo">
-                    <a href="#"><img src="imagenes/logo.png" alt="Logo de Pepsi"></a>
+                    <a href="#"><img src="logo.png" alt="Logo de Pepsi"></a>
                 </li>
             </ul>
         </header>
@@ -53,12 +53,8 @@
             </div>
         </div>
         </div>
-             <div>
-                <button class="botones">
-                    <img src="c:\Users\Innovacion\Desktop\Pasantia\NCLNeovibes-Demo.otf" alt="flecha">
-                </button>
-            </div>
+            
     </main>
-<script src="scripts/productos.js"></script>
+<script src="productos.js"></script>
 </body>
 </html>
