--- a/pepsi-nitro-vainilla.html
+++ b/pepsi-nitro-vainilla.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="css/pepsi-nitro.css">
+    <link rel="stylesheet" href="pepsi-nitro-vainilla.css">
 </head>
 <body>
     <main>
         <header>
             <ul>
                 <li class="Enlaces">
-                    <a href="htmls\contacto.html">Contacto</a>
-                    <a href="htmls\pepsi.html">Productos</a>
-                    <a href="htmls\index.html">Entrevista</a>
+                    <a href="contacto.html">Contacto</a>
+                    <a href="pepsi.html">Productos</a>
+                    <a href="index.html">Entrevista</a>
                 </li>
                 <li class="Enlace__logo">
-                    <a href="#"><img src="imagenes/pepsi-nitro-draft-pdp.jpeg" alt="Logo de Pepsi"></a>
+                    <a href="#"><img src="logo.png" alt="Logo de Pepsi"></a>
                 </li>
             </ul>
         </header>
         <div class="contenedor">
         <div class="hoja">
             <div class="info_nutri">
-                <h1>PEPSI NITRO </h1>
+                <h1>PEPSI NITRO VAINILLA</h1>
                 <hr class="linea">
                 <h2>Informacion Nutricional</h2>
                 <hr class="linea">
@@ -43,22 +43,23 @@
                 <p>6 %</p>   
                 </div>
                 <div class="kiko">
-                 <p>Carbohidratos totales: 62g</p>   
+                 <p>Carbohidratos totales: 63g</p>   
                  <p>21 %</p>  
                 </div>
-                <p>Azúcares: 62g</p>    
+                <p>Azúcares: 63g</p>    
                 <p id="proteina">Proteína: 0g</p>
                 <hr>
-                <p>AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA ,COLOR CARAMELO , SABOR NATURAL ,POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) ,ÁCIDO FOSFÓRICO , CAFEÍNA , BENZOATO DE SODIO (CONSERVA LA FRESCURA) ,SORBATO DE POTASIO (CONSERVA LA FRESCURA) ,ÁCIDO TARTÁRICO ,GOMA ARÁBIGA , ÁCIDO CÍTRICO , SAL , EXTRACTO DE QUILAYA , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR) , NITRÓGENO</p>
+                <p>AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA ,COLOR CARAMELO , SABOR NATURAL Y ARTIFICIAL , POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) ,ÁCIDO FOSFÓRICO , CAFEÍNA , BENZOATO DE SODIO (CONSERVA LA FRESCURA) ,BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , ÁCIDO TARTÁRICO ,ÁCIDO CÍTRICO , GOMA ARÁBIGA , EXTRACTO DE QUILAYA , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR) , SAL , NITRÓGENO</p>
             </div>
         </div>
         </div>
-             <div>
-                <button class="botones">
-                    <img src="c:\Users\Innovacion\Desktop\Pasantia\NCLNeovibes-Demo.otf" alt="flecha">
-                </button>
+             <div class="flechas">
+                <a href="pepsi-zero.html" class="flecha-izquierda">←</a>
+            </div>
+            <div class="flechas">
+                <a href="pepsi-nitro.html" class="flecha-derecha">→</a>
             </div>
     </main>
-<script src="scripts/productos.js"></script>
+<script src="productos.js"></script>
 </body>
 </html>
