--- a/pepsi.html
+++ b/pepsi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="pepsi.css">
 </head>
 <body>
     <main>
@@ -47,15 +47,16 @@
                  <p>14 %</p>  
                 </div>
                 <p>Azúcares: 41g</p>    
-                </div>
-                 <div>
-                <p>Proteína: 0g</p> 
-                </div>
+                <p id="proteina">Proteína: 0g</p>
+                <hr>
+                <p> AGUA CARBONATADA , COLOR CARAMELO , ÁCIDO FOSFÓRICO , ASPARTAMO , BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , SABOR NATURAL , ACESULFAMO DE POTASIO , ÁCIDO CÍTRICO , EXTRACTO DE RAÍZ DE PANAX GINSENG , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR)</p>
+            </div>
         </div>
         </div>
+             <div class="flechas">
+                <a href="pepsi-diet.html">→</a>
+            </div>
     </main>
-
-<script>
-</script>
+<script src="productos.js"></script>
 </body>
 </html>
