--- a/pepsi-diet.html
+++ b/pepsi-diet.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="css/pepsi-zero.css">
+    <link rel="stylesheet" href="pepsi-diet.css">
 </head>
 <body>
     <main>
         <header>
             <ul>
                 <li class="Enlaces">
-                    <a href="htmls\contacto.html">Contacto</a>
-                    <a href="htmls\pepsi.html">Productos</a>
-                    <a href="htmls\index.html">Entrevista</a>
+                    <a href="contacto.html">Contacto</a>
+                    <a href="pepsi.html">Productos</a>
+                    <a href="index.html">Entrevista</a>
                 </li>
                 <li class="Enlace__logo">
-                    <a href="#"><img src="imagenes/logo.png" alt="Logo de Pepsi"></a>
+                    <a href="#"><img src="logo.png" alt="Logo de Pepsi"></a>
                 </li>
             </ul>
         </header>
         <div class="contenedor">
         <div class="hoja">
             <div class="info_nutri">
-                <h1>PEPSI ZERO</h1>
+                <h1>PEPSI DIET</h1>
                 <hr class="linea">
                 <h2>Informacion Nutricional</h2>
                 <hr class="linea">
@@ -39,8 +39,8 @@
                     <p>0 %</p>
                 </div>
                 <div class="kiko">
-                <p>Sodio: 40 mg</p> 
-                <p>2 %</p>   
+                <p>Sodio: 35 mg</p> 
+                <p>1 %</p>   
                 </div>
                 <div class="kiko">
                  <p>Carbohidratos totales: 0g</p>   
@@ -49,14 +49,17 @@
                 <p>Azúcares: 0g</p>    
                 <p id="proteina">Proteína: 0g</p>
                 <hr>
-                <p>AGUA CARBONATADA , COLOR CARAMELO , ÁCIDO FOSFÓRICO , ASPARTAMO , BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , SABOR NATURAL , ACESULFAMO DE POTASIO , ÁCIDO CÍTRICO , EXTRACTO DE RAÍZ DE PANAX GINSENG , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR)</p>
+                <p> AGUA CARBONATADA , COLOR CARAMELO , ASPARTAMO , ÁCIDO FOSFÓRICO , BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , ÁCIDO CÍTRICO , SABOR NATURAL , ACESULFAMO DE POTASIO</p>
             </div>
         </div>
         </div>
-             <div class="botones">
-                <button>HOLA</button>
+             <div class="flechas">
+                <a href="pepsi.html" class="flecha-izquierda">←</a>
+            </div>
+            <div class="flechas">
+                <a href="pepsi-zero.html" class="flecha-derecha">→</a>
             </div>
     </main>
-<script src="scripts/productos.js"></script>
+<script src="productos.js"></script>
 </body>
 </html>
