--- a/pepsi-mango.html
+++ b/pepsi-mango.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="css/pepsi.css">
+    <link rel="stylesheet" href="pepsi-mango.css">
 </head>
 <body>
     <main>
         <header>
             <ul>
                 <li class="Enlaces">
-                    <a href="htmls\contacto.html">Contacto</a>
-                    <a href="htmls\pepsi.html">Productos</a>
-                    <a href="htmls\index.html">Entrevista</a>
+                    <a href="contacto.html">Contacto</a>
+                    <a href="pepsi.html">Productos</a>
+                    <a href="index.html">Entrevista</a>
                 </li>
                 <li class="Enlace__logo">
-                    <a href="#"><img src="imagenes/logo.png" alt="Logo de Pepsi"></a>
+                    <a href="#"><img src="pepsi-mango-pdp.jpeg" alt="Logo de Pepsi"></a>
                 </li>
             </ul>
         </header>
         <div class="contenedor">
         <div class="hoja">
             <div class="info_nutri">
-                <h1>PEPSI</h1>
+                <h1>PEPSI MANGO</h1>
                 <hr class="linea">
                 <h2>Informacion Nutricional</h2>
                 <hr class="linea">
@@ -39,7 +39,7 @@
                     <p>0 %</p>
                 </div>
                 <div class="kiko">
-                <p>Sodio: 30 mg</p> 
+                <p>Sodio: 95mg</p> 
                 <p>1 %</p>   
                 </div>
                 <div class="kiko">
@@ -49,7 +49,7 @@
                 <p>Azúcares: 41g</p>    
                 <p id="proteina">Proteína: 0g</p>
                 <hr>
-                <p> AGUA CARBONATADA , COLOR CARAMELO , ÁCIDO FOSFÓRICO , ASPARTAMO , BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , SABOR NATURAL , ACESULFAMO DE POTASIO , ÁCIDO CÍTRICO , EXTRACTO DE RAÍZ DE PANAX GINSENG , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR)</p>
+                <p>AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA , COLOR CARAMELO , POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) , ÁCIDO FOSFÓRICO , SABOR NATURAL , SORBATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , GOMA ARÁBIGA , ÁCIDO CÍTRICO , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR)</p>
             </div>
         </div>
         </div>
@@ -59,6 +59,6 @@
                 </button>
             </div>
     </main>
-<script src="scripts/productos.js"></script>
+<script src="productos.js"></script>
 </body>
 </html>
