Actualizacion de Header

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <main>
         <header>
             <li class="Enlace__logo">
-                        <a href="index.html"><img src="logo.png" alt="Logo de Pepsi"></a>
-                </li>
-            <button class="menu-btn">...</button>
+                        <a href="index.html"><img src="https://www.pepsi.com/assets/images/pepsi-logos/logo-0.png" alt="Logo de Pepsi"></a>
+            </li>
+            <button class="menu-btn">≡</button>
             <nav>
                 <ul class="menu-items">
+                        <button class="menu-btn-2">✕</button>
+                        <img src="https://www.pepsi.com/assets/images/pepsi-logos/logo-0.png" alt="">
                         <li class="items_inicio"><a href="index.html">Inicio</a></li>
-                        <li class="items_contacto"><a href="contacto.html">Contacto</a></li>
                         <li class="items_productos"><a href="pepsi.html">Productos</a></li>
-                        <li class="items-pruductos"><a href="entrevista.html">Entrevista</a></li>
+                        <li class="items_contacto"><a href="contacto.html">Contacto</a></li>
+                        <li class="items_entrevista"><a href="entrevista.html">Entrevista</a></li>
                 </ul>
             </nav>
         </header>
