--- a/pepsi-mango.html
+++ b/pepsi-mango.html
@@ -9,16 +9,20 @@
 <body>
     <main>
         <header>
-            <ul>
-                <li class="Enlaces">
-                    <a href="contacto.html">Contacto</a>
-                    <a href="pepsi.html">Productos</a>
-                    <a href="index.html">Entrevista</a>
-                </li>
-                <li class="Enlace__logo">
-                    <a href="#"><img src="pepsi-mango-pdp.jpeg" alt="Logo de Pepsi"></a>
-                </li>
-            </ul>
+            <li class="Enlace__logo">
+                        <a href="index.html"><img src="https://www.pepsi.com/assets/images/pepsi-logos/logo-0.png" alt="Logo de Pepsi"></a>
+            </li>
+            <button class="menu-btn">≡</button>
+            <nav>
+                <ul class="menu-items">
+                        <button class="menu-btn-2">✕</button>
+                        <img src="https://www.pepsi.com/assets/images/pepsi-logos/logo-0.png" alt="">
+                        <li class="items_inicio"><a href="index.html">Inicio</a></li>
+                        <li class="items_productos"><a href="pepsi.html">Productos</a></li>
+                        <li class="items_contacto"><a href="contacto.html">Contacto</a></li>
+                        <li class="items_entrevista"><a href="entrevista.html">Entrevista</a></li>
+                </ul>
+            </nav>
         </header>
         <div class="contenedor">
         <div class="hoja">
@@ -60,5 +64,6 @@
             </div>
     </main>
 <script src="productos.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
