Organizacion con Carpeta

--- a/html-productos/contacto.html
+++ b/html-productos/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="stylecontact.css">
+    <link rel="stylesheet" href="css/stylecontact.css">
 </head>
 <body>
     <main>
@@ -59,6 +59,6 @@
             </div>
         </div>
     </main>
-<script src="index.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
