--- a/html-productos/entrevista.html
+++ b/html-productos/entrevista.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
@@ -61,14 +61,14 @@
 
                 <div>
                     <h4>Contanos sobre vos:</h4>
-                    <textarea name="textarea" id="info-form"></textarea>
+                    <textarea name="textarea" id="info-form" placeholder="Escribe algo..."></textarea>
                 </div>
 
                 <input type="button" value="Enviar" id="btn">
             </div>
     </main>
-    <script src="entrevista.js"></script>
-    <script src="index.js"></script>
+    <script src="js/entrevista.js"></script>
+    <script src="js/index.js"></script>
 </body>
 <footer>copyright©M/s Pepsi pasantia. All rights reserved</footer>
 </html>
