--- a/html-productos/pepsi-diet.html
+++ b/html-productos/pepsi-diet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="pepsi-diet.css">
+    <link rel="stylesheet" href="css/pepsi-diet.css">
 </head>
 <body>
     <main>
@@ -55,6 +55,6 @@
         </div>
             
     </main>
-<script src="productos.js"></script>
+<script src="js/productos.js"></script>
 </body>
 </html>
