--- a/html-productos/pepsi-nitro.html
+++ b/html-productos/pepsi-nitro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="pepsi-zero.css">
+    <link rel="stylesheet" href="css/pepsi-nitro.css">
 </head>
 <body>
     <main>
@@ -27,7 +27,7 @@
         <div class="contenedor">
         <div class="hoja">
             <div class="info_nutri">
-                <h1>PEPSI ZERO</h1>
+                <h1>PEPSI NITRO </h1>
                 <hr class="linea">
                 <h2>Informacion Nutricional</h2>
                 <hr class="linea">
@@ -36,35 +36,35 @@
                 <hr>
                <div><p class="derecha">% Valor diario</p></div> 
                 <div>
-                    <p>Calorías: 0</p>
+                    <p>Calorías: 230</p>
                 </div>
                 <div class="kiko">
                     <p>Grasa total: 0 g</p>
                     <p>0 %</p>
                 </div>
                 <div class="kiko">
-                <p>Sodio: 40 mg</p> 
-                <p>2 %</p>   
+                <p>Sodio: 140 mg</p> 
+                <p>6 %</p>   
                 </div>
                 <div class="kiko">
-                 <p>Carbohidratos totales: 0g</p>   
-                 <p>0 %</p>  
+                 <p>Carbohidratos totales: 62g</p>   
+                 <p>21 %</p>  
                 </div>
-                <p>Azúcares: 0g</p>    
+                <p>Azúcares: 62g</p>    
                 <p id="proteina">Proteína: 0g</p>
                 <hr>
-                <p>AGUA CARBONATADA , COLOR CARAMELO , ÁCIDO FOSFÓRICO , ASPARTAMO , BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , SABOR NATURAL , ACESULFAMO DE POTASIO , ÁCIDO CÍTRICO , EXTRACTO DE RAÍZ DE PANAX GINSENG , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR)</p>
+                <p>AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA ,COLOR CARAMELO , SABOR NATURAL ,POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) ,ÁCIDO FOSFÓRICO , CAFEÍNA , BENZOATO DE SODIO (CONSERVA LA FRESCURA) ,SORBATO DE POTASIO (CONSERVA LA FRESCURA) ,ÁCIDO TARTÁRICO ,GOMA ARÁBIGA , ÁCIDO CÍTRICO , SAL , EXTRACTO DE QUILAYA , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR) , NITRÓGENO</p>
             </div>
         </div>
         </div>
-              <div class="flechas">
-                <a href="pepsi-diet.html" class="flecha-izquierda">←</a>
+             <div class="flechas">
+                <a href="pepsi-nitro-vainilla.html" class="flecha-izquierda">←</a>
             </div>
             <div class="flechas">
-                <a href="pepsi-nitro-vainilla.html" class="flecha-derecha">→</a>
+                <a href="pepsi-mango.html" class="flecha-derecha">→</a>
             </div>
     </main>
-<script src="productos.js"></script>
-<script src="index.js"></script>
+<script src="js/productos.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
