--- a/html-productos/pepsi.html
+++ b/html-productos/pepsi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="pepsi.css">
+    <link rel="stylesheet" href="css/pepsi.css">
 </head>
 <body>
     <main>
@@ -61,7 +61,7 @@
                 <a href="pepsi-diet.html">→</a>
             </div>
     </main>
-<script src="productos.js"></script>
-<script src="index.js"></script>
+<script src="js/productos.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
