--- a/html-productos/index.html
+++ b/html-productos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <main>
@@ -71,7 +71,7 @@
 
         </div>
     </main>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 <footer>copyright©M/s Pepsi pasantia. All rights reserved</footer>
 </html>
