--- a/html-productos/pepsi-mango.html
+++ b/html-productos/pepsi-mango.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="pepsi-diet.css">
+    <link rel="stylesheet" href="css/pepsi-mango.css">
 </head>
 <body>
     <main>
@@ -27,7 +27,7 @@
         <div class="contenedor">
         <div class="hoja">
             <div class="info_nutri">
-                <h1>PEPSI DIET</h1>
+                <h1>PEPSI MANGO</h1>
                 <hr class="linea">
                 <h2>Informacion Nutricional</h2>
                 <hr class="linea">
@@ -36,35 +36,34 @@
                 <hr>
                <div><p class="derecha">% Valor diario</p></div> 
                 <div>
-                    <p>Calorías: 0</p>
+                    <p>Calorías: 150</p>
                 </div>
                 <div class="kiko">
                     <p>Grasa total: 0 g</p>
                     <p>0 %</p>
                 </div>
                 <div class="kiko">
-                <p>Sodio: 35 mg</p> 
+                <p>Sodio: 95mg</p> 
                 <p>1 %</p>   
                 </div>
                 <div class="kiko">
-                 <p>Carbohidratos totales: 0g</p>   
-                 <p>0 %</p>  
+                 <p>Carbohidratos totales: 41g</p>   
+                 <p>14 %</p>  
                 </div>
-                <p>Azúcares: 0g</p>    
+                <p>Azúcares: 41g</p>    
                 <p id="proteina">Proteína: 0g</p>
                 <hr>
-                <p> AGUA CARBONATADA , COLOR CARAMELO , ASPARTAMO , ÁCIDO FOSFÓRICO , BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , ÁCIDO CÍTRICO , SABOR NATURAL , ACESULFAMO DE POTASIO</p>
+                <p>AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA , COLOR CARAMELO , POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) , ÁCIDO FOSFÓRICO , SABOR NATURAL , SORBATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , GOMA ARÁBIGA , ÁCIDO CÍTRICO , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR)</p>
             </div>
         </div>
         </div>
-             <div class="flechas">
-                <a href="pepsi.html" class="flecha-izquierda">←</a>
-            </div>
-            <div class="flechas">
-                <a href="pepsi-zero.html" class="flecha-derecha">→</a>
+             <div>
+                <button class="botones">
+                    <img src="c:\Users\Innovacion\Desktop\Pasantia\NCLNeovibes-Demo.otf" alt="flecha">
+                </button>
             </div>
     </main>
-<script src="productos.js"></script>
-<script src="index.js"></script>
+<script src="js/productos.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
