--- a/html-productos/pepsi-nitro-vainilla.html
+++ b/html-productos/pepsi-nitro-vainilla.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="pepsi-nitro-vainilla.css">
+    <link rel="stylesheet" href="css/pepsi-nitro-vainilla.css">
 </head>
 <body>
     <main>
@@ -64,7 +64,7 @@
                 <a href="pepsi-nitro.html" class="flecha-derecha">→</a>
             </div>
     </main>
-<script src="productos.js"></script>
-<script src="index.js"></script>
+<script src="js/productos.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
