Estilo de Contacto actualizado

--- a/html-productos/index.html
+++ b/html-productos/index.html
@@ -40,7 +40,7 @@
         
         <div class="content">
 
-            <div class="content_main">
+            <div id="content_main" class="content_main">
                 <div class="column">
                     <a href="#"><img src="https://www.pepsi.com/s3fs-public/2025-05/3303620_Pepsicom_2025_Work_May_Drop_TShirt_R1_Product%20Tile%20666%20x%20666.png" alt="img de merchandise"></a>
                 </div>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="content_title">
-                <img src="pepsi-revamp.png" alt="Pepsi revamp img">
+                <img src="images/pepsi-revamp.png" alt="Pepsi revamp img">
                 <h1>¡Participa ahora para tener la oportunidad de ganar una colección
                     de productos retro de edición limitada!</h1>
                 <li class="content_title_btn">
