--- a/html-productos/contacto.html
+++ b/html-productos/contacto.html
@@ -37,7 +37,7 @@
                 <h1>Nuestras redes sociales</h1>
                 <ul>
                     <li>
-                        <a href="#" class="logo_x"><img src="x-logo.png" alt="Logo de X" sizes=""></a>
+                        <a href="#" class="logo_x"><img src="css/images/x-logo.png" alt="Logo de X" sizes=""></a>
                     </li>
                 </ul>
             </div>
