--- a/html-productos/index.html
+++ b/html-productos/index.html
@@ -30,8 +30,9 @@
                 <h1>Bienvenido</h1>
                 <h2>Empecemos</h2>
                 <li>
-                    <a href="http://">Desliza para informacion<br>
-                                                ▼</a>
+                    <a href="#">Desliza para informacion</a>
+                    <br>
+                    <button onclick="irAbajo()">▼</button>                     
                 </li>
             </div>
             <div class="container__img"><img src="https://www.pepsi.com/assets/images/cans/can-2.webp" alt="logo de pepsi"></div>
@@ -56,7 +57,7 @@
             </div>
 
             <div class="content_title">
-                <img src="pepsi-revamp.png" alt="Pepsi revamp img">
+                <img src="css/images/pepsi-revamp.png" alt="Pepsi revamp img">
                 <h1>¡Participa ahora para tener la oportunidad de ganar una colección
                     de productos retro de edición limitada!</h1>
                 <li class="content_title_btn">
@@ -68,10 +69,11 @@
                          *Actual prize may vary from what’s shown.</a>
                 </li>
             </div>     
-
+            <section id="seccion-destino"></section>
         </div>
     </main>
     <script src="js/index.js"></script>
+    <script src="js/abajo.js"></script>
 </body>
 <footer>copyright©M/s Pepsi pasantia. All rights reserved</footer>
 </html>
