--- a/html-productos/pepsi-mango.html
+++ b/html-productos/pepsi-mango.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="kiko">
                 <p>Sodio: 95mg</p> 
-                <p>1 %</p>   
+                <p>4 %</p>   
                 </div>
                 <div class="kiko">
                  <p>Carbohidratos totales: 41g</p>   
@@ -57,10 +57,9 @@
             </div>
         </div>
         </div>
-             <div>
-                <button class="botones">
-                    <img src="c:\Users\Innovacion\Desktop\Pasantia\NCLNeovibes-Demo.otf" alt="flecha">
-                </button>
+             <div class="flechas">
+                <a class="flecha-derecha" href="pepsi-nitro.html">←</a>
+                <a class="flecha-izquierda" href="pepsi-mango-zero.html">→</a>
             </div>
     </main>
 <script src="js/productos.js"></script>
