--- a/html-productos/pepsi-nitro-vainilla.html
+++ b/html-productos/pepsi-nitro-vainilla.html
@@ -53,15 +53,13 @@
                 <p>Azúcares: 63g</p>    
                 <p id="proteina">Proteína: 0g</p>
                 <hr>
-                <p>AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA ,COLOR CARAMELO , SABOR NATURAL Y ARTIFICIAL , POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) ,ÁCIDO FOSFÓRICO , CAFEÍNA , BENZOATO DE SODIO (CONSERVA LA FRESCURA) ,BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , ÁCIDO TARTÁRICO ,ÁCIDO CÍTRICO , GOMA ARÁBIGA , EXTRACTO DE QUILAYA , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR) , SAL , NITRÓGENO</p>
+                <p class="ingredientes">AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA ,COLOR CARAMELO , SABOR NATURAL Y ARTIFICIAL , POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) ,ÁCIDO FOSFÓRICO , CAFEÍNA , BENZOATO DE SODIO (CONSERVA LA FRESCURA) ,BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , ÁCIDO TARTÁRICO ,ÁCIDO CÍTRICO , GOMA ARÁBIGA , EXTRACTO DE QUILAYA , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR) , SAL , NITRÓGENO</p>
             </div>
         </div>
         </div>
              <div class="flechas">
-                <a href="pepsi-zero.html" class="flecha-izquierda">←</a>
-            </div>
-            <div class="flechas">
-                <a href="pepsi-nitro.html" class="flecha-derecha">→</a>
+                <a class="flecha-derecha" href="pepsi-diet.html">←</a>
+                <a class="flecha-izquierda" href="pepsi-nitro.html">→</a>
             </div>
     </main>
 <script src="js/productos.js"></script>
