--- a/html-productos/pepsi-nitro.html
+++ b/html-productos/pepsi-nitro.html
@@ -53,15 +53,13 @@
                 <p>Azúcares: 62g</p>    
                 <p id="proteina">Proteína: 0g</p>
                 <hr>
-                <p>AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA ,COLOR CARAMELO , SABOR NATURAL ,POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) ,ÁCIDO FOSFÓRICO , CAFEÍNA , BENZOATO DE SODIO (CONSERVA LA FRESCURA) ,SORBATO DE POTASIO (CONSERVA LA FRESCURA) ,ÁCIDO TARTÁRICO ,GOMA ARÁBIGA , ÁCIDO CÍTRICO , SAL , EXTRACTO DE QUILAYA , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR) , NITRÓGENO</p>
+                <p class="ingredientes">AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA ,COLOR CARAMELO , SABOR NATURAL ,POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) ,ÁCIDO FOSFÓRICO , CAFEÍNA , BENZOATO DE SODIO (CONSERVA LA FRESCURA) ,SORBATO DE POTASIO (CONSERVA LA FRESCURA) ,ÁCIDO TARTÁRICO ,GOMA ARÁBIGA , ÁCIDO CÍTRICO , SAL , EXTRACTO DE QUILAYA , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR) , NITRÓGENO</p>
             </div>
         </div>
         </div>
-             <div class="flechas">
-                <a href="pepsi-nitro-vainilla.html" class="flecha-izquierda">←</a>
-            </div>
-            <div class="flechas">
-                <a href="pepsi-mango.html" class="flecha-derecha">→</a>
+              <div class="flechas">
+                <a class="flecha-derecha" href="pepsi-nitro-vainilla.html">←</a>
+                <a class="flecha-izquierda" href="pepsi-mango.html">→</a>
             </div>
     </main>
 <script src="js/productos.js"></script>
