--- a/html-productos/pepsi-wildcherry-zero.html
+++ b/html-productos/pepsi-wildcherry-zero.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
-    <link rel="stylesheet" href="css/pepsi-diet.css">
+    <link rel="stylesheet" href="css/pepsi-wildcherry-zero.css">
 </head>
 <body>
     <main>
@@ -27,7 +27,7 @@
         <div class="contenedor">
         <div class="hoja">
             <div class="info_nutri">
-                <h1>PEPSI DIET</h1>
+                <h1 class="nombre-bebida">PEPSI WILDCHERRY ZERO</h1>
                 <hr class="linea">
                 <h2>Informacion Nutricional</h2>
                 <hr class="linea">
@@ -43,7 +43,7 @@
                     <p>0 %</p>
                 </div>
                 <div class="kiko">
-                <p>Sodio: 35 mg</p> 
+                <p>Sodio: 35mg</p> 
                 <p>1 %</p>   
                 </div>
                 <div class="kiko">
@@ -53,13 +53,13 @@
                 <p>Azúcares: 0g</p>    
                 <p id="proteina">Proteína: 0g</p>
                 <hr>
-                <p> AGUA CARBONATADA , COLOR CARAMELO , ASPARTAMO , ÁCIDO FOSFÓRICO , BENZOATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , ÁCIDO CÍTRICO , SABOR NATURAL , ACESULFAMO DE POTASIO</p>
+                <p>AGUA CARBONATADA , JARABE DE MAÍZ DE ALTA FRUCTOSA , COLOR CARAMELO , POLIFOSFATO DE SODIO (PARA PROTEGER EL SABOR) , ÁCIDO FOSFÓRICO , SABOR NATURAL , SORBATO DE POTASIO (CONSERVA LA FRESCURA) , CAFEÍNA , GOMA ARÁBIGA , ÁCIDO CÍTRICO , EDTA DISÓDICO DE CALCIO (PARA PROTEGER EL SABOR)</p>
             </div>
         </div>
         </div>
              <div class="flechas">
-                <a class="flecha-derecha" href="pepsi-zero.html">←</a>
-                <a class="flecha-izquierda" href="pepsi-nitro-vainilla.html">→</a>
+                <a class="flecha-derecha" href="pepsi-mango.html">←</a>
+                <a class="flecha-izquierda" href="pepsi-wildcherry-zero.html">→</a>
             </div>
     </main>
 <script src="js/productos.js"></script>
