--- a/html-productos/pepsi-zero.html
+++ b/html-productos/pepsi-zero.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="css/pepsi-zero.css">
 </head>
 <body>
-    <main>
-        <header>
+    <header>
             <li class="Enlace__logo">
                         <a href="index.html"><img src="https://www.pepsi.com/assets/images/pepsi-logos/logo-0.png" alt="Logo de Pepsi"></a>
             </li>
@@ -58,10 +57,8 @@
         </div>
         </div>
               <div class="flechas">
-                <a href="pepsi-diet.html" class="flecha-izquierda">←</a>
-            </div>
-            <div class="flechas">
-                <a href="pepsi-nitro-vainilla.html" class="flecha-derecha">→</a>
+                <a class="flecha-derecha" href="pepsi.html">←</a>
+                <a class="flecha-izquierda" href="pepsi-diet.html">→</a>
             </div>
     </main>
 <script src="js/productos.js"></script>
