--- a/html-productos/pepsi.html
+++ b/html-productos/pepsi.html
@@ -58,7 +58,7 @@
         </div>
         </div>
              <div class="flechas">
-                <a href="pepsi-diet.html">→</a>
+                <a href="pepsi-zero.html">→</a>
             </div>
     </main>
 <script src="js/productos.js"></script>
